--- a/src/assets/scss/themes/components/_card.scss
+++ b/src/assets/scss/themes/components/_card.scss
@@ -13,8 +13,10 @@
         h5 {
             margin-bottom: 0;
             color: #525f71;
-            font-size: 14px;
-            font-weight: 600;
+            font:{
+                size:14px;
+                weight: 600;
+            }
 
             +p,
             +small {
@@ -25,14 +27,13 @@
                 }
             }
         }
-
         .card-header-right {
             right: 10px;
             top: 10px;
+            display: inline-block;
             float: right;
             padding: 0;
             position: absolute;
-
             @media only screen and (max-width: 575px) {
                 display: none;
             }
@@ -69,7 +70,6 @@
                     outline: none;
                 }
             }
-
             // custom toggler
             .btn.dropdown-toggle {
                 border: none;
@@ -113,19 +113,16 @@
             box-shadow: none;
         }
     }
-
-    @each $color,
-    $value in $theme-colors {
+    @each $color, $value in $theme-colors {
+        // .card-footer.bg-#{$color},
         &.bg-#{$color} {
             box-shadow: 0 9px 9px -1px transparentize($value, 0.7);
         }
     }
 }
-
 @include media-breakpoint-down(sm) {
     .card {
         margin-bottom: 20px;
     }
 }
-
 // Card css end
