--- a/src/assets/scss/themes/layouts/_pc-common.scss
+++ b/src/assets/scss/themes/layouts/_pc-common.scss
@@ -61,6 +61,10 @@
         border-right: 1px solid darken($body-bg, 10%);
     }
 
+    +.row {
+        // margin-top: 55px;
+    }
+
     .breadcrumb {
         padding: 0;
         display: inline-flex;
