--- a/src/assets/scss/themes/layouts/_pc-sidebar.scss
+++ b/src/assets/scss/themes/layouts/_pc-sidebar.scss
@@ -23,7 +23,6 @@
         padding: 15px 20px 10px;
         letter-spacing: 0.07em;
         text-transform: uppercase;
-
         font: {
             size: 11px;
             weight: 600;
@@ -35,13 +34,11 @@
 
         span:not(.badge) {
             display: block;
-            color: #67758a;
-
+            color: #67758A;
             font: {
                 size: 10px;
                 weight: 500;
             }
-
             text-transform: capitalize;
         }
     }
@@ -63,11 +60,11 @@
             }
         }
 
-        >svg {
+        > svg {
             width: 18px;
             height: 18px;
             color: $sidebar-icon-color;
-            fill: rgba(114, 103, 239, 0.2);
+            fill: rgba(114,103,239,0.2);
         }
     }
 
@@ -75,7 +72,6 @@
         display: block;
         padding: 13px 20px;
         color: $sidebar-color;
-
         font: {
             size: 13px;
             weight: 500;
@@ -88,7 +84,6 @@
             color: $sidebar-active-color;
 
             .pc-micon {
-
                 i,
                 svg {
                     color: $sidebar-active-color;
@@ -102,7 +97,7 @@
         display: inline-block;
         transition: all 0.2s ease-in-out;
 
-        >svg {
+        > svg {
             width: 14px;
             height: 14px;
         }
@@ -131,7 +126,6 @@
     }
 
     .pc-submenu {
-
         // display: none;
         // &:not(.pc-trigger){
         //     display: none;
@@ -154,21 +148,13 @@
     }
 
     .pc-item {
-        &.disabled {
-            a {
-                cursor: not-allowed;
-                user-select: none;
-            }
-        }
-
         &.active,
         &:focus,
         &:hover {
-            >.pc-link {
+            > .pc-link {
                 color: $sidebar-active-color;
 
                 .pc-micon {
-
                     i,
                     svg {
                         color: $sidebar-active-color;
@@ -179,12 +165,11 @@
     }
 
     .pc-navbar {
-        >.pc-item {
-
+        > .pc-item {
             &.active,
             &:focus,
             &:hover {
-                >.pc-link {
+                > .pc-link {
                     background: $brand-color;
                 }
             }
@@ -193,12 +178,12 @@
 
     .pc-hasmenu {
         &.pc-trigger {
-            >.pc-submenu {
+            > .pc-submenu {
                 display: block;
             }
 
-            >.pc-link {
-                >.pc-arrow {
+            > .pc-link {
+                > .pc-arrow {
                     transform: rotate(90deg);
                 }
             }
@@ -215,15 +200,30 @@ body:not(.minimenu) {
         .pc-submenu {
             position: relative;
 
+            &:after {
+                // content: "";
+                // width: 1px;
+                // height: calc(100% - 18px);
+                // background: #67758A;
+                // position: absolute;
+                // left: 38px;
+                // top: 0;
+                // opacity: 0.7;
+            }
+
             .pc-item {
                 position: relative;
 
                 &:before {
                     content: "→";
+                    // width: 6px;
+                    // height: 6px;
                     position: absolute;
                     left: 40px;
                     top: 10px;
+                    // border-radius: 50%;
                     z-index: 1;
+                    // opacity: 0.7;
                     transition: 0.35s cubic-bezier(0.54, 1.6, 0.5, 1);
                     color: $sidebar-icon-color;
                 }
@@ -237,19 +237,31 @@ body:not(.minimenu) {
                 &:hover {
                     &:before {
                         left: 45px;
+                        // color: transparentize($primary,.8);
                     }
+                }
+
+                &:after {
+                    // content: "";
+                    // width: 18px;
+                    // height: 1px;
+                    // background: #67758A;
+                    // position: absolute;
+                    // left: 38px;
+                    // top: 21px;
+                    // opacity: 0.7;
                 }
             }
 
             .pc-submenu {
-                >.pc-item {
+                > .pc-item {
                     &:before {
                         left: 60px;
                     }
                 }
 
                 .pc-submenu {
-                    >.pc-item {
+                    > .pc-item {
                         &:before {
                             left: 80px;
                         }
@@ -267,15 +279,15 @@ body:not(.minimenu) {
     width: 100vw;
     height: 100vh;
     z-index: 1;
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(0,0,0,0.2);
 }
 
 .minimenu {
     .pc-sidebar {
         width: $sidebar-collapsed-width;
 
-        .pc-hasmenu.pc-trigger:not(:hover)>.pc-submenu,
-        .pc-hasmenu:not(:hover)>.pc-submenu {
+        .pc-hasmenu.pc-trigger:not(:hover) > .pc-submenu,
+        .pc-hasmenu:not(:hover) > .pc-submenu {
             display: none;
         }
 
@@ -294,7 +306,7 @@ body:not(.minimenu) {
         .pc-badge,
         .pc-caption,
         .pc-mtext,
-        .pc-navbar>li>a>.pc-arrow {
+        .pc-navbar > li > a > .pc-arrow {
             display: none;
         }
 
@@ -328,7 +340,7 @@ body:not(.minimenu) {
             position: relative;
 
             &:hover {
-                >.pc-link {
+                > .pc-link {
                     width: calc(200px + #{$sidebar-collapsed-width});
                     background: $brand-color;
                     color: $sidebar-active-color;
@@ -337,7 +349,6 @@ body:not(.minimenu) {
                         i {
                             color: #fff;
                         }
-
                         margin-right: 40px;
                     }
 
@@ -346,7 +357,7 @@ body:not(.minimenu) {
                     }
                 }
 
-                >.pc-submenu {
+                > .pc-submenu {
                     display: block;
                     width: 200px;
                 }
@@ -354,12 +365,12 @@ body:not(.minimenu) {
 
             .pc-item {
                 &:hover {
-                    >.pc-link {
+                    > .pc-link {
                         width: 200px;
                         background: $sidebar-background;
                     }
 
-                    >.pc-submenu {
+                    > .pc-submenu {
                         top: 0;
                     }
                 }
@@ -367,7 +378,6 @@ body:not(.minimenu) {
         }
     }
 }
-
 @media (min-width: 1025px) {
     .navbar-overlay {
         .pc-sidebar {
@@ -385,7 +395,6 @@ body:not(.minimenu) {
         }
     }
 }
-
 @media (max-width: 1024px) {
     .pc-sidebar {
         left: -#{$sidebar-width};
@@ -405,10 +414,11 @@ body:not(.minimenu) {
     }
 
     .minimenu {
+        .pc-sidebar.mob-sidebar-active {}
+
         .pc-container {
             margin-left: 0;
         }
     }
 }
-
 // Sidebar css end
