--- a/src/assets/scss/landing.scss
+++ b/src/assets/scss/landing.scss
@@ -210,14 +210,14 @@ header {
         &:nth-child(1),
         &:nth-child(4) {
             .feature-block {
-                border-start-color: transparent;
+                border-left-color: transparent;
             }
         }
 
         &:nth-child(3),
         &:nth-child(6) {
             .feature-block {
-                border-end-color: transparent;
+                border-right-color: transparent;
             }
         }
     }
@@ -638,8 +638,8 @@ footer {
 
     .feature-block {
         border-bottom-color: transparent;
-        border-start-color: transparent;
-        border-end-color: transparent;
+        border-left-color: transparent;
+        border-right-color: transparent;
         border-top-color: $border-color !important;
     }
 
