--- a/src/assets/scss/themes/components/_button.scss
+++ b/src/assets/scss/themes/components/_button.scss
@@ -34,9 +34,9 @@
 }
 @each $color, $value in $theme-colors {
     .btn-light-#{$color} {
-        background: shift-color($value, $soft-bg-level);
+        background: scale-color($value, $soft-bg-level);
         color: $value;
-        border-color: shift-color($value, $soft-bg-level);
+        border-color: scale-color($value, $soft-bg-level);
 
         &:hover {
             background: $value;
