--- a/src/assets/scss/themes/layouts/_pc-header.scss
+++ b/src/assets/scss/themes/layouts/_pc-header.scss
@@ -60,7 +60,7 @@
         &:hover {
             text-decoration: none;
             color: $primary;
-            background: shift-color($primary, $soft-bg-level);
+            background: scale-color($primary, $soft-bg-level);
 
             .hamburger {
                 .hamburger-inner {
@@ -125,7 +125,7 @@
         transform: none !important;
         top: 100% !important;
 
-        &.dropdown-menu-end {
+        &.dropdown-menu-right {
             right: 0 !important;
             left: auto !important;
         }
@@ -147,9 +147,9 @@
         position: static;
 
         .pc-mega-dmenu {
-            transform: none !important;
             left: 0 !important;
-            right: 0 !important;
+            right: 0;
+            transform: none !important;
             top: 100% !important;
             padding: 0;
 
@@ -186,7 +186,7 @@
         .cart-head {
             border-radius: 2px 2px 0 0;
             padding: 20px;
-            background: transparentize(shift-color($primary, $soft-bg-level),0.8);
+            background: transparentize(scale-color($primary, $soft-bg-level),0.8);
             border-bottom: 1px solid $border-color;
         }
 
@@ -212,7 +212,7 @@
 
             &.table-responsive {
                 border-top: 1px solid $border-color;
-                background: transparentize(shift-color($primary, $soft-bg-level),0.8);
+                background: transparentize(scale-color($primary, $soft-bg-level),0.8);
             }
 
             svg {
