--- a/src/html/layouts/header-content.html
+++ b/src/html/layouts/header-content.html
@@ -1,8 +1,7 @@
-<div class="me-auto pc-mob-drp">
+<div class="mr-auto pc-mob-drp">
 	<ul class="list-unstyled">
 		<li class="dropdown pc-h-item">
-			<a class="pc-head-link active dropdown-toggle arrow-none me-0" data-bs-toggle="dropdown" href="#"
-				role="button" aria-haspopup="false" aria-expanded="false">
+			<a class="pc-head-link active dropdown-toggle arrow-none mr-0" data-toggle="dropdown" href="#" role="button" aria-haspopup="false" aria-expanded="false">
 				Level
 			</a>
 			<div class="dropdown-menu pc-h-dropdown">
@@ -13,7 +12,7 @@
 				<div class="pc-level-menu">
 					<a href="#!" class="dropdown-item">
 						<i class="material-icons-two-tone">list_alt</i>
-						<span class="float-end"><i data-feather="chevron-right" class="me-0"></i></span>
+						<span class="float-right"><i data-feather="chevron-right" class="mr-0"></i></span>
 						<span>Level2.1</span>
 					</a>
 					<div class="dropdown-menu pc-h-dropdown">
@@ -59,14 +58,13 @@
 		</li>
 	</ul>
 </div>
-<div class="ms-auto">
+<div class="ml-auto">
 	<ul class="list-unstyled">
 		<li class="dropdown pc-h-item">
-			<a class="pc-head-link dropdown-toggle arrow-none me-0" data-bs-toggle="dropdown" href="#" role="button"
-				aria-haspopup="false" aria-expanded="false">
+			<a class="pc-head-link dropdown-toggle arrow-none mr-0" data-toggle="dropdown" href="#" role="button" aria-haspopup="false" aria-expanded="false">
 				<i class="material-icons-two-tone">search</i>
 			</a>
-			<div class="dropdown-menu dropdown-menu-end pc-h-dropdown drp-search">
+			<div class="dropdown-menu dropdown-menu-right pc-h-dropdown drp-search">
 				<form class="px-3">
 					<div class="form-group mb-0 d-flex align-items-center">
 						<i data-feather="search"></i>
@@ -76,22 +74,18 @@
 			</div>
 		</li>
 		<li class="dropdown pc-h-item">
-			<a class="pc-head-link dropdown-toggle arrow-none me-0" data-bs-toggle="dropdown" href="#" role="button"
-				aria-haspopup="false" aria-expanded="false">
+			<a class="pc-head-link dropdown-toggle arrow-none mr-0" data-toggle="dropdown" href="#" role="button" aria-haspopup="false" aria-expanded="false">
 				<img src="assets/images/user/avatar-2.jpg" alt="user-image" class="user-avtar">
 				<span>
 					<span class="user-name">Joseph William</span>
 					<span class="user-desc">Administrator</span>
 				</span>
 			</a>
-			<div class="dropdown-menu dropdown-menu-end pc-h-dropdown">
+			<div class="dropdown-menu dropdown-menu-right pc-h-dropdown">
 				<div class=" dropdown-header">
-					<h5 class="text-overflow m-0"><span class="badge bg-light-primary"><a
-								href="https://dashboardkit.io/product/dashboardkit-vanillajs-bootstrap-5-admin-dashboard/"
-								target="_blank">Upgrade to
-								Pro</a></span></h5>
+					<h5 class="text-overflow m-0"><span class="badge bg-light-primary"><a href="https://gumroad.com/dashboardkit" target="_blank">Upgrade to Pro</a></span></h5>
 				</div>
-
+				
 				<a href="auth-signin.html" class="dropdown-item">
 					<i class="material-icons-two-tone">chrome_reader_mode</i>
 					<span>Logout</span>
